--- a/HotelIdealG81/src/Vistas/HuespedView.form
+++ b/HotelIdealG81/src/Vistas/HuespedView.form
@@ -201,6 +201,11 @@
       </Properties>
     </Component>
     <Component class="javax.swing.JTextField" name="jtApellido">
+      <Properties>
+        <Property name="nextFocusableComponent" type="java.awt.Component" editor="org.netbeans.modules.form.ComponentChooserEditor">
+          <ComponentRef name="default"/>
+        </Property>
+      </Properties>
     </Component>
     <Component class="javax.swing.JTextField" name="jtTelefono">
       <Properties>
@@ -217,6 +222,11 @@
       </Properties>
     </Component>
     <Component class="javax.swing.JTextField" name="jtDireccion">
+      <Properties>
+        <Property name="nextFocusableComponent" type="java.awt.Component" editor="org.netbeans.modules.form.ComponentChooserEditor">
+          <ComponentRef name="default"/>
+        </Property>
+      </Properties>
     </Component>
     <Component class="javax.swing.JButton" name="jbBuscar">
       <Properties>
