--- a/HotelIdealG81/src/Vistas/TipoHabitación.form
+++ b/HotelIdealG81/src/Vistas/TipoHabitación.form
@@ -60,23 +60,18 @@
                   </Group>
               </Group>
               <Group type="103" groupAlignment="0" attributes="0">
-                  <Group type="102" attributes="0">
-                      <EmptySpace min="-2" pref="48" max="-2" attributes="0"/>
-                      <Component id="JBuscar" min="-2" pref="97" max="-2" attributes="0"/>
-                      <EmptySpace pref="12" max="32767" attributes="0"/>
-                  </Group>
                   <Group type="102" alignment="1" attributes="0">
                       <EmptySpace max="32767" attributes="0"/>
+                      <Component id="jbEliminar" min="-2" pref="122" max="-2" attributes="0"/>
+                      <EmptySpace min="-2" pref="22" max="-2" attributes="0"/>
+                  </Group>
+                  <Group type="102" alignment="0" attributes="0">
+                      <EmptySpace min="-2" pref="48" max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="0" attributes="0">
-                          <Group type="102" alignment="1" attributes="0">
-                              <Component id="jLimpiar" min="-2" pref="97" max="-2" attributes="0"/>
-                              <EmptySpace min="24" pref="24" max="-2" attributes="0"/>
-                          </Group>
-                          <Group type="102" alignment="1" attributes="0">
-                              <Component id="jbEliminar" min="-2" pref="122" max="-2" attributes="0"/>
-                              <EmptySpace min="-2" pref="22" max="-2" attributes="0"/>
-                          </Group>
+                          <Component id="jLimpiar" min="-2" pref="97" max="-2" attributes="0"/>
+                          <Component id="JBuscar" min="-2" pref="97" max="-2" attributes="0"/>
                       </Group>
+                      <EmptySpace pref="20" max="32767" attributes="0"/>
                   </Group>
               </Group>
           </Group>
@@ -111,7 +106,7 @@
                       <Component id="jLimpiar" min="-2" max="-2" attributes="0"/>
                   </Group>
               </Group>
-              <EmptySpace pref="6" max="32767" attributes="0"/>
+              <EmptySpace max="32767" attributes="0"/>
               <Group type="103" groupAlignment="3" attributes="0">
                   <Component id="jLabel5" alignment="3" min="-2" max="-2" attributes="0"/>
                   <Component id="jctc" alignment="3" min="-2" max="-2" attributes="0"/>
@@ -248,11 +243,10 @@
     <Component class="javax.swing.JComboBox" name="jctc">
       <Properties>
         <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
-          <StringArray count="4">
+          <StringArray count="3">
             <StringItem index="0" value="Simple"/>
-            <StringItem index="1" value="Doble"/>
-            <StringItem index="2" value="Triple"/>
-            <StringItem index="3" value="Suite Lujo"/>
+            <StringItem index="1" value="Queen"/>
+            <StringItem index="2" value="King"/>
           </StringArray>
         </Property>
       </Properties>
