--- a/HotelIdealG81/src/Vistas/HabitacionesView.form
+++ b/HotelIdealG81/src/Vistas/HabitacionesView.form
@@ -239,6 +239,9 @@
         </Property>
         <Property name="text" type="java.lang.String" value="LIMPIAR"/>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jtLimpiarActionPerformed"/>
+      </Events>
     </Component>
   </SubComponents>
 </Form>
