--- a/HotelIdealG81/src/Vistas/ReservaView.form
+++ b/HotelIdealG81/src/Vistas/ReservaView.form
@@ -384,7 +384,18 @@
     <Component class="javax.swing.JComboBox" name="jcbNumHab">
       <Properties>
         <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
-          <StringArray count="0"/>
+          <StringArray count="10">
+            <StringItem index="0" value="1"/>
+            <StringItem index="1" value="3"/>
+            <StringItem index="2" value=""/>
+            <StringItem index="3" value="5"/>
+            <StringItem index="4" value="7"/>
+            <StringItem index="5" value="8 10"/>
+            <StringItem index="6" value="33"/>
+            <StringItem index="7" value="44"/>
+            <StringItem index="8" value="65"/>
+            <StringItem index="9" value="75"/>
+          </StringArray>
         </Property>
         <Property name="nextFocusableComponent" type="java.awt.Component" editor="org.netbeans.modules.form.ComponentChooserEditor">
           <ComponentRef name="jdcIngreso"/>
